<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/state" />

    <TextView
        android:id="@+id/status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.43"
        android:text="@string/status" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="140dp"
        android:layout_height="0dp"
        android:layout_weight="0.31"
        android:text="@string/input"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/cutoffVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        style="@android:style/Theme.Light"
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:layout_weight="0.32"
        android:visibility="visible" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/button_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="startMonitor"
            android:text="@string/button_start" />

        <Button
            android:id="@+id/button_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="stopMonitor"
            android:text="@string/button_stop" />
    </LinearLayout>

    <TextView
        android:id="@+id/instruction_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <View
        style="@android:style/Theme.Light"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/instructions" />

</LinearLayout>